syntax = "proto3";

package cron;

import "google/protobuf/timestamp.proto";

option go_package = "chronos/gen/go/cron";

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_RUNNING     = 1;
  JOB_STATUS_SUCCESS     = 2;
  JOB_STATUS_ERROR       = 3;
}

service CronService {
  rpc RunCron(JobArgs) returns (stream JobProgress);
}

message JobArgs {
  string                    job_name        = 1;
  google.protobuf.Timestamp last_checkpoint = 2;
}

message JobProgress {
  google.protobuf.Timestamp current_checkpoint = 1;
  JobStatus                 status             = 2;
  string                    error              = 3;
}